[package]
edition = "2021"
name = "print-char"
version = "0.1.0"

[[bin]]
name = "print-char"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "defmt",
  "esp32",
  "unstable",
] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.8.1", features = ["defmt", "esp32"] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

embedded-hal-bus = "0.3.0"
max7219-display = { git = "https://github.com/ImplFerris/max7219-display", features = [
  "led-matrix",
] }
# max7219-display = {version="0.1.0", features = [
#   "led-matrix",
# ] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
